; ModuleID = '/home/carl/AnghaBench/brotli/c/dec/extr_decode.c_BrotliDecoderDecompress.c'
source_filename = "/home/carl/AnghaBench/brotli/c/dec/extr_decode.c_BrotliDecoderDecompress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BROTLI_DECODER_RESULT_ERROR = common dso_local global i64 0, align 8
@BROTLI_DECODER_RESULT_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @BrotliDecoderDecompress(i64 %0, i32* %1, i64* %2, i32* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32*, align 8
  store i64 %0, i64* %6, align 8
  store i32* %1, i32** %7, align 8
  store i64* %2, i64** %8, align 8
  store i32* %3, i32** %9, align 8
  store i64 0, i64* %12, align 8
  %17 = load i64, i64* %6, align 8
  store i64 %17, i64* %13, align 8
  %18 = load i32*, i32** %7, align 8
  store i32* %18, i32** %14, align 8
  %19 = load i64*, i64** %8, align 8
  %20 = load i64, i64* %19, align 8
  store i64 %20, i64* %15, align 8
  %21 = load i32*, i32** %9, align 8
  store i32* %21, i32** %16, align 8
  %22 = call i32 @BrotliDecoderStateInit(i32* %10, i32 0, i32 0, i32 0)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %26, label %24

24:                                               ; preds = %4
  %25 = load i64, i64* @BROTLI_DECODER_RESULT_ERROR, align 8
  store i64 %25, i64* %5, align 8
  br label %38

26:                                               ; preds = %4
  %27 = call i64 @BrotliDecoderDecompressStream(i32* %10, i64* %13, i32** %14, i64* %15, i32** %16, i64* %12)
  store i64 %27, i64* %11, align 8
  %28 = load i64, i64* %12, align 8
  %29 = load i64*, i64** %8, align 8
  store i64 %28, i64* %29, align 8
  %30 = call i32 @BrotliDecoderStateCleanup(i32* %10)
  %31 = load i64, i64* %11, align 8
  %32 = load i64, i64* @BROTLI_DECODER_RESULT_SUCCESS, align 8
  %33 = icmp ne i64 %31, %32
  br i1 %33, label %34, label %36

34:                                               ; preds = %26
  %35 = load i64, i64* @BROTLI_DECODER_RESULT_ERROR, align 8
  store i64 %35, i64* %11, align 8
  br label %36

36:                                               ; preds = %34, %26
  %37 = load i64, i64* %11, align 8
  store i64 %37, i64* %5, align 8
  br label %38

38:                                               ; preds = %36, %24
  %39 = load i64, i64* %5, align 8
  ret i64 %39
}

declare dso_local i32 @BrotliDecoderStateInit(i32*, i32, i32, i32) #1

declare dso_local i64 @BrotliDecoderDecompressStream(i32*, i64*, i32**, i64*, i32**, i64*) #1

declare dso_local i32 @BrotliDecoderStateCleanup(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
